# letters-and-numbers

./: .gitignore  Demo001.pl  Demo004_original.pl  Dockerfile  README.md  build.sbt  docker-compose.yml
docker/: .scalafmt.conf  README.md  build.sbt  docker-bake.ps1  docker-compose.yml  flake.nix
docker/ui/: Cargo.toml  Dockerfile  Trunk-dev.toml  index.html  index.scss
docker/ui/src/: Theme.elm  config.rs  main.rs
docker/ui/src/actions/: mod.rs  reset_action.rs  solve_action.rs
docker/ui/src/backend/core/: expression.rs
docker/ui/src/components/: action.rs  desktop.rs  goal_view.rs  icon_button.rs  mod.rs  number_view.rs  numbers_view.rs  solution_view.rs  validated.rs  warning_border.rs
docker/ui/src/config/: config.rs  default_config.rs
docker/ui/src/frontend/components/: number_view.rs  warning_border.rs
docker/ui/src/model/: goal.rs  mod.rs  number.rs  numbers.rs  solution.rs
docker/ui/src/shared/: numbers.rs  solution.rs
docker/ui/static/css/: components.css
gleam/: Dockerfile  README.md  gleam.toml  manifest.toml
htmx/: Cargo.toml
htmx/assets/css/: style.css
htmx/assets/js/: trace.js
htmx/src/: app.rs  lib.rs  main.rs
htmx/src/domain/: goal.rs  mod.rs  number.rs  numbers.rs  solution.rs
htmx/src/html/: actions.rs  base.rs  goal.rs  index.rs  mod.rs  number.rs  numbers.rs  solve_action.rs
htmx/src/state/: app_state.rs  game_state.rs  mod.rs  numbers_state.rs
rust/: Cargo.toml  Dockerfile  README.md  _color.scss  docker-compose.yml  index.html  index.scss
rust/docker/: Dockerfile
rust/src/: desktop.rs  expression.rs  goal.rs  main.rs  number.rs  numbers.rs  resolver.rs  resolver_service.rs  solution.rs  validate.rs  warning_icon.rs
rust/src/api/: resolver_service.rs
rust/src/backend/core/: operator.rs  resolver.rs
rust/src/core/: expression.rs  mod.rs  operator.rs  resolver.rs  result.rs
rust/src/frontend/components/: goal_view.rs  icon_button.rs
rust/src/shared/: number.rs
rust/src/ui/: desktop.rs  goal.rs  mod.rs  number.rs  numbers.rs  solution.rs  validate.rs  warning_icon.rs
rust/static/css/: theme.css
scala/: package-lock.json  package.json
v/: flake.nix  v.mod
v/src/: main.v  (+1 more)
zig/: flake.nix
(+123 files in other folders)
