[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-htmx = "0.6.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
