[package]
name = "letters-and-numbers"
version = "0.1.0"
edition = "2018"
description = "Letters and Numbers; Numbers game using Yew / Bulma"
readme = "README.md"
repository = "https://gitlab.com/nigeleke/letters-and-numbers/"
keywords = ["yew", "ybc", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
comp = "0.2.1"
getrandom = { version = "0.2.3", features = ["js"] }
itertools = "0.10.1"
log = "0.4.6"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
yew = "0.18"
wasm-logger = "0.2.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

#[profile.dev]
#opt-level = 0

#[profile.release]
#opt-level = 3
